--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.3",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
+    "qrcode": "^1.5.4",
     "sharp": "^0.34.5",
     "xlsx": "^0.18.5"
   },
